Fix outline on mobile submit, make responsive layout for create page

--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -114,6 +114,9 @@
       background-color: lighten($main, 5);
       border: 4px solid $lgray;
     }
+    &:focus {
+      outline: none;
+    }
   }
 }
 
