--- a/public/scss/containers.scss
+++ b/public/scss/containers.scss
@@ -3,6 +3,7 @@
 }
 
 .container {
+	position: relative;
 	margin: 0 auto;
 	max-width: 1020px;
 }
